# sos

./: .env.example  .gitignore  AI_EMPLOYEE_ACTIVATION.md  CHANGELOG.md  DYAD_CONSTITUTION.md  LIVING_LAND_TASK.md  MIGRATION_TASKS.md  ONBOARD_ARCHITECT_TASK.md  README.md  RESISTANCE_TASK.md  STABILIZE_TASK.md  TASKS.md  TECHNICAL_DEBT.md  VAZIR_UPDATE.md  VEIL_TASK.md  VERTEX_INTEGRATION_TASK.md  boot_swarm.sh  connect_river.py  demo_alpha_drift.py  docker-compose.hardened.yml  docker-compose.yml  inject_reality.py  migrate_frc.py  pyproject.toml  sos_cli.py  test_boot.py  test_e2e.py  test_live.py  test_mcp.py  test_memory_integration.py  test_pulse.py  test_recursive.py  test_solana_bridge.py  verify_physics_loop.py  verify_spore_lifecycle.py
.data/: economy.db  memory.db
.github/workflows/: publish.yml
adapters/luanti/: agent.py  foal_builder.py  frc16d.py  life.py  octave_game.py  octave_match.py
adapters/minecraft/: README.md  index.js  package-lock.json  package.json
adapters/sandbox/: README.md  adapter.py
adapters/sandbox/assets/: foal_metadata.json  kasra_metadata.json  river_metadata.json
agents/geminicli/mirror/: agent.md
architecture/: CLI_ROUTER.md  MCP_FLOW.md  OVERVIEW.md
artifacts/: guild_pass_schema.json  wallet_plugin.py
artifacts/spores/: e2e_test_agent_spore_20260112_023752.md  e2e_test_agent_spore_20260117_002330.md  e2e_test_agent_spore_20260117_002456.md  gemini_cli_11jan_spore_20260112_021801.md  gemini_cli_11jan_spore_20260112_022049.md  master_spore_v0_1.md  river_soul_v1.md
data/: memory.db
data/economy/: economy.db
data/memory/: memory.db
data/redis/: dump.rdb
deploy/: alerts.rules.yml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/ui/: index.html
docs/: ARCHITECTURE.md  ARTIFACT_REGISTRY.md  MARKETPLACE.md  README.md  ROADMAP.md  TASK_SYSTEM.md  docusaurus.config.ts  package-lock.json  package.json
docs/architecture/: AGENT_ARCHITECTURE.md
docs/content/: website_copy.md
docs/docs/: intro.md  mumega_model.md  onboarding.md  self_hosted_architecture.md  whitepaper.md
docs/docs/antigravity/: frc_16d_331.md  investor_memo.md  multi_perspective_analysis.md  opinion_antigravity.md  opinion_witness.md  prime_2_analysis.md  refactoring_analysis.md  reflection_architecture_audit.md  reflection_civilization.md  reflection_home.md  reflection_snapshot.md
docs/docs/architecture/: ARCHITECTURE_AGREEMENT.md  ECONOMICS_MIND.md  EDITION_PACKAGING.md  MESSAGE_BUS.md  OBSERVABILITY.md  OPENCLAW_LEARNINGS.md  PLUGIN_MODEL.md  README.md  ROADMAP.md  SECURITY_MODEL.md  STATE_MACHINES.md  SUGGESTIONS.md  acquisition_yeast_strategy.md  archetypal_cards.md  cli_router_architecture.md  economy_guilds.md  forging_protocol.md  (+17 more)
docs/pitches/: amazon_gamedev_pitch.md
docs/ux/: TMA_DEPLOYMENT.md  audit.md
infra/: install-services.sh  nginx_siavashgerd.conf  sos.service  uninstall-services.sh
infra/systemd/: sos-economy.service  sos-engine.service  sos-memory.service  sos-tools.service  sos.target
scopes/adapters/: README.md
scopes/adapters/tauri/src-tauri/: Cargo.toml  tauri.conf.json
scopes/adapters/tauri/src-tauri/src/: main.rs
scopes/core/: README.md
scopes/deployment/: README.md
scopes/features/: README.md
scripts/: audit_architecture.py  bootstrap_river.py  connect_kasra.py  generate_river_keys.py  ingest_frc.py  kasra_onboard.py  onboard_architect.py  onboard_claude_final.py  openclaw_benchmark.sh  sos_cli.py  verify_mirror_connection.py  wake_river.py
security/: capability.py  test_capability.py
sos/: __init__.py  cli.py  main.py  server.py
sos/adapters/: telegram.py
sos/agents/: __init__.py  definitions.py  onboarding.py  registry.py
sos/artifacts/: __init__.py  registry.py  schema.py
sos/cli/: __init__.py
sos/clients/: __init__.py  base.py  economy.py  engine.py  grok.py  memory.py  mirror.py  tools.py  voice.py
sos/contracts/: __init__.py  bus.py  economy.py  engine.py  errors.py  governance.py  memory.py  storage.py  tools.py
sos/execution/: __init__.py  sandbox.py
sos/kernel/: __init__.py  capability.py  config.py  context.py  dreams.py  gateway.py  gemini_cache.py  git_soul.py  hatchery.py  identity.py  intent.py  metabolism.py  physics.py  projection.py  river_keychain.py  rotator.py  schema.py  scopes.py  skills.py  soul.py  spore.py  ssrf.py  validation.py
sos/observability/: __init__.py  audit.py  doctor.py  logging.py  metrics.py  tracing.py
sos/plugins/: __init__.py  manifest.py  registry.py
sos/services/: __init__.py
sos/tests/: __init__.py  test_artifact_registry.py  test_audit.py  test_autonomy.py  test_capability.py  test_capability_enforcement.py  test_capability_signing.py  test_cli.py  test_clients.py  test_dreams.py  test_economy_service.py  test_engine_service.py  test_gateway.py  test_load.py  test_memory_service.py  test_metrics.py  test_observability_integration.py  test_plugins.py  test_resilience.py  test_sandbox_runner.py  test_scopes.py  test_ssrf.py  test_storage.py  test_tools_contract.py  test_tools_execution_flag.py  test_tools_mcp.py  test_tools_plugins.py  test_tools_service.py  test_vertex_adk.py
sos/tools/: wordpress-mcp-pattern.md
sos/vendors/: __init__.py  cloudflare.py
systemd/: sos-engine.service  sos-gateway-bridge.service  sos-gateway-mcp.service  sos-memory.service
tests/: final_trace.py  health_audit.py  test_boot.py  test_bus.py  test_capability_verification.py  test_corp_league_integration.py  test_council_worker.py  test_e2e_full.py  test_gemini_import.py  test_identity.py  test_identity_qnft.py  test_mcp_deep.py  test_memory_integration.py  test_monitor.py  test_sovergent.py  test_swarm.py  test_ton.py  test_vertex_adapter.py  test_witness.py
tests/e2e/: test_ui_flow.py
tests/qnft_minting/: sos_agent_1768111992_b664.json
verticals/legal/: README.md
web/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
(+257 files in other folders)
