[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sos"
version = "0.1.0"
description = "SovereignOS (SOS) - A sovereign, modular operating system for agents and humans."
readme = { file = "docs/README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Mumega Collective" }]
dependencies = [
  "fastapi>=0.100",
  "httpx>=0.24",
  "google-genai>=0.1.0",
  "pydantic>=2.0",
  "PyNaCl>=1.5",
  "uvicorn>=0.20",
  "google-auth>=2.22.0",
  "google-auth-oauthlib>=1.1.0",
  "google-api-python-client>=2.97.0",
  "duckduckgo-search>=3.8.5",
]

[project.scripts]
sos-engine = "sos.services.engine.__main__:main"
sos-memory = "sos.services.memory.__main__:main"
sos-economy = "sos.services.economy.__main__:main"
sos-tools = "sos.services.tools.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sos*"]

