[package]
name = "shabrang"
version = "0.1.0"
description = "Shabrang Desktop Shell - SOS Native Application"
authors = ["Mumega <kasra@mumega.com>"]
edition = "2021"

[lib]
name = "shabrang_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
